# cpp-ai-template

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
.agents/: CONVENTIONS.md  HANDOFF_TEMPLATE.md  INDEX.md  README.md
.agents/roles/: architect.md  developer.md  documenter.md  maintainer.md  reviewer.md  tester.md
.agents/scripts/: README.md  bootstrap.sh  check.sh  clean.sh  context.sh  deps.sh  format.sh  lint.sh  sanitize.sh  validate.sh
.agents/subagents/architect/: SKILL.md
.agents/subagents/developer/: README.md  SKILL.md
.agents/subagents/documenter/: SKILL.md
.agents/subagents/maintainer/: README.md  SKILL.md
.agents/subagents/reviewer/: SKILL.md
.agents/subagents/tester/: README.md  SKILL.md
.agents/templates/: new-module.md  new-test.md
.agents/utilities/: cmake.md  git.md
.codex/: README.md  checklists.md  commands.md  config.toml
cmake/: Dependencies.cmake  GoogleTest.cmake  Packaging.cmake  ProjectOptions.cmake  Sanitizers.cmake  Warnings.cmake  cpp_ai_templateConfig.cmake.in  version_config.hpp.in
docs/: AI_WORKFLOW.md  CMAKE.md  CONVENTIONS.md  DEPENDENCIES.md  GIT.md  INDEX.md  PROJECT_LAYOUT.md  REVIEW.md  ROADMAP.md  STYLE.md  TESTING.md  TROUBLESHOOTING.md  VALIDATION.md
docs/TOOL_RULES/: README.md
examples/app/: main.cpp
include/cpp_ai_template/: version.hpp
src/: version.cpp
tests/: version_test.cpp
